--- a/public/assets/css/profil.css
+++ b/public/assets/css/profil.css
@@ -333,14 +333,37 @@ h1 {
     display: flex;
     align-items: center; 
     gap: 10px;
+    justify-content: space-around;
 }
 
+.like-button, .comment-toggle-btn, .share-button {
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    background: none; 
+    color: white; 
+    font-weight: bold;
+    margin-top: 9.5px;
+    margin-bottom: 10px;
+}
+
+.like-button, .comment-toggle-btn, .share-button {
+    padding: 0;
+    margin: 0;
+}
+
+.like-button:focus, .comment-toggle-btn:focus, .share-button:focus {
+    outline: none;
+}
+
+.like-button:hover, .comment-toggle-btn:hover, .share-button:hover {
+    text-decoration: underline;
+    opacity: 0.8;
+}
 .like-button{
-    background-color: aquamarine;
-    color: black;
+    color: rgb(255, 255, 255);
     border-radius: 5px;
     font-weight: bold;
-
 }
 
 .like-section, .comment-section {
@@ -350,7 +373,6 @@ h1 {
 .like-button, .comment-toggle-btn {
     padding: 5px 10px;
     border: none;
-    background-color: #f0f0f0;
     cursor: pointer;
     border-radius: 5px;
 }
@@ -366,8 +388,7 @@ h1 {
 }
 
 .comment-toggle-btn {
-    background-color: #f0f0f0;
-    color: black;
+    color: rgb(255, 255, 255);
     border: none;
     margin-top: 9.5px;
     padding: 5px 10px;
@@ -414,7 +435,56 @@ h1 {
 .comment-form button:hover {
     background-color: #0056b3;
 }
-/* Animation pour faire apparaître la modal en douceur */
+
+.share-button{
+    background: none;
+    border: none;
+    margin-top: 9.5px;
+    padding: 5px 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+ 
+}
+
+.share-options {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.share-options button {
+    background: none;
+    border: none;
+    
+    cursor: pointer;
+    padding: 5px;
+}
+
+.share-options img {
+    width: 40px;
+    height: 40px;
+}
+
+.share-modal{
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 25%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .modal-content {
+    background-color: #424242;
+    margin: 15% auto;
+    padding: 5px;
+    border: 1px solid #888;
+    width: 300px;
+    text-align: center;
+  }
+
 @keyframes modalFadeIn {
     from {
         opacity: 0;
