--- a/public/assets/css/addContent.css
+++ b/public/assets/css/addContent.css
@@ -1,9 +1,9 @@
 body {
     background-color: black; 
     display: flex;
-    flex-direction: column; /* Change pour empiler les éléments verticalement */
-    justify-content: flex-start; /* Modifié pour aligner les éléments vers le haut */
-    align-items: center; /* Centre horizontalement */
+    flex-direction: column; 
+    justify-content: flex-start;
+    align-items: center; 
     min-height: 100vh; 
     margin: 0;
     font-family: Arial, sans-serif; 
@@ -46,7 +46,7 @@ form {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
     max-width: 400px;
     width: 100%;
-    margin-top: 20px; /* Ajoutez un peu d'espace au-dessus du formulaire */
+    margin-top: 20px; 
 }
 
 label {
