--- a/public/assets/css/profil.css
+++ b/public/assets/css/profil.css
@@ -70,20 +70,17 @@ main {
     padding-top: 70px;
 }
 
-/* Profile section: align image to the left and button to the right */
 #profilEdit {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Ensures the button is on the right */
+    justify-content: space-between; 
     margin-bottom: 20px;
 }
 
-/* Profile picture on the left */
 #profilEdit img {
     margin-right: 15px;
 }
 
-/* Modifier le profil button on the right side of the screen */
 #profilEdit a {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
@@ -93,15 +90,13 @@ main {
     border-radius: 20px;
     font-size: 0.9em;
     transition: background-color 0.3s ease;
-    margin-left: auto; /* Pushes the button to the right */
+    margin-left: auto; 
 }
 
-/* Button hover effect */
 #profilEdit a:hover {
     background-color: #7fffd4;
 }
 
-/* Style for username in aquamarine */
 #username {
     color: aquamarine;
     font-weight: bold;
@@ -277,29 +272,29 @@ h1 {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Arrière-plan semi-transparent plus sombre */
+    background-color: rgba(0, 0, 0, 0.8); 
     justify-content: center;
     align-items: center;
 }
 
 .modal-content {
-    background-color: #1e1e1e; /* Fond sombre comme le contenu de la page */
+    background-color: #1e1e1e; 
     padding: 30px;
     border-radius: 15px;
     width: 400px;
     text-align: center;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Effet d'ombre élégant */
-    color: white; /* Texte blanc pour le contraste */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); 
+    color: white;
 }
 
 .modal-content h2 {
     margin: 0 0 20px;
-    color: aquamarine; /* Titre en aquamarine pour correspondre au style global */
+    color: aquamarine;
 }
 
 .modal-content p {
     margin-bottom: 20px;
-    color: #a0a0a0; /* Texte plus léger pour le contraste */
+    color: #a0a0a0; 
 }
 
 .confirm-delete, .cancel-delete {
@@ -307,7 +302,7 @@ h1 {
     border-radius: 5px;
     cursor: pointer;
     border: none;
-    transition: background-color 0.3s ease; /* Transition fluide au survol */
+    transition: background-color 0.3s ease; 
 }
 
 .confirm-delete {
@@ -326,7 +321,7 @@ h1 {
 }
 
 .cancel-delete:hover {
-    background-color: #7fffd4; /* Un peu plus clair au survol */
+    background-color: #7fffd4; 
 }
 
 .interaction{
@@ -488,11 +483,11 @@ h1 {
 @keyframes modalFadeIn {
     from {
         opacity: 0;
-        transform: translateY(-20px); /* La modal démarre légèrement au-dessus */
+        transform: translateY(-20px); 
     }
     to {
         opacity: 1;
-        transform: translateY(0); /* Retour à la position d'origine */
+        transform: translateY(0); 
     }
 }
 
