--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -1,11 +1,12 @@
 body {
-    background-color: black; 
+    background-color: black;
     display: flex;
     justify-content: center;
-    align-items: center; 
-    min-height: 100vh; 
+    align-items: center;
+    min-height: 100vh;
     margin: 0;
-    font-family: Arial, sans-serif; 
+    font-family: Arial, sans-serif;
+    overflow: hidden;
 }
 
 main {
@@ -24,9 +25,9 @@ main {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
 }
 
-img{
-    width: 28vw; 
-    height: auto; 
+img {
+    width: 28vw;
+    height: auto;
 
 }
 
@@ -34,7 +35,7 @@ h1 {
     color: aquamarine;
     text-align: center;
     font-size: 1.5em;
-    margin-bottom: 15px; 
+    margin-bottom: 15px;
 }
 
 label {
@@ -51,7 +52,7 @@ input[type="password"],
 select {
     width: 100%;
     padding: 2px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
     border: 1px solid #444;
     border-radius: 5px;
     background-color: #000;
@@ -84,7 +85,7 @@ a {
     color: rgb(255, 255, 255);
     display: block;
     text-align: center;
-    margin-top: 10px; 
+    margin-top: 10px;
     text-decoration: none;
     transition: color 0.3s ease;
 }
@@ -93,7 +94,7 @@ a:hover {
     color: #2bc2d9;
 }
 
-span{
+span {
     color: aquamarine;
 }
 
@@ -168,6 +169,31 @@ p {
 .btnModal:hover {
     background-color: aquamarine;
     color: black;
+}
+
+@media (min-width: 769px) {
+    img {
+        position: absolute;
+        top: 0;
+        left: 40%;
+        width: 20vw;
+
+    }
+
+    #form {
+        position: absolute;
+        bottom: 5%;
+    }
+
+    input[type="text"],
+    input[type="number"],
+    input[type="email"],
+    input[type="password"],
+    select {
+        width: 100%;
+        padding: 7px;
+    }
+
 }
 
 @media (max-width: 768px) {
