--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -14,6 +14,9 @@
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<link rel="icon" href="/../../assets/imgs/LogoBlackRemoveBg.png" type="logoPulse">
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue &family=Mogra&display=swap');
+		</style>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
