--- a/views/pages/account.twig
+++ b/views/pages/account.twig
@@ -9,6 +9,8 @@
 {% endblock %}
 
 {% block main %}
+{% include "../partials/header.twig" %}
+
 	<form action="/update" method="POST" enctype="multipart/form-data">
 		<div class="header">
 			<li>
