--- a/views/pages/welcome.twig
+++ b/views/pages/welcome.twig
@@ -23,10 +23,10 @@
 			</ul>
 		</nav>
 	</div>
-	<div>
-	<img src="/../../assets/imgs/background.png" alt="">
-	</div>
-	
+
+	<img id="backgroundHeader" src="/../../assets/imgs/Background.png" alt="">
+
+
 	<section>
 		<h2>Top Artiste</h2>
 		<div class="carousel-container">
