--- a/public/assets/css/addFriend.css
+++ b/public/assets/css/addFriend.css
@@ -17,6 +17,39 @@ body {
     border-bottom: 1px solid #3d3d3d;
 }
 
+#searchUser {
+    position: absolute;
+    top: 6%;
+    left: 10%;
+    width: 80%;
+    padding: 10px;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    margin: 0 auto;
+    display: block;
+    background-color: #1e1e1e;
+    color: white;
+    font-size: 1rem;
+    margin-top: 15px;
+    z-index: 10;
+}
+
+#userList {
+    position: absolute;
+    top: 18%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 95%;
+    padding: 10px;
+    max-height: 300px;
+    overflow-y: auto;
+    background-color: #1e1e1e;
+    border-radius: 10px;
+    border: 1px solid #e1e8ed;
+    z-index: 1000;
+    display: none;
+}
+
 .back-arrow {
     margin-right: auto;
 }
@@ -69,6 +102,7 @@ h1 {
     padding: 0;
     margin: 0 auto; 
     width: 100%; 
+    margin-top: 30px;
 }
 
 .user-card {
