--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -208,10 +208,8 @@ section {
 .slider li {
     flex: 0 0 auto;
     width: 300px;
-    margin-right: 20px;
     background-color: #1e1e1e;
     border-radius: 10px;
-    padding: 15px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -257,7 +255,7 @@ video {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
     .logo {
         width: 16%;
         height: 200%;
@@ -267,9 +265,11 @@ video {
         height: 100px;
     }
 
-    img {
+    #backgroundHeader {
+        object-fit: cover;
+        object-position: 10% 10%;
         width: 1900px;
-        height: 400px;
+        height: 450px;
     }
 
     #nav-menu {
@@ -283,7 +283,7 @@ video {
         right: 0;
     }
 
-    section{
+    section {
         margin-top: 50px;
     }
 
@@ -303,7 +303,7 @@ video {
     h2,
     h3 {
         font-size: 2rem;
-        font-family: "Mogra", system-ui;
+        font-family: "Bebas Neue", serif;
         font-weight: 400;
         font-style: normal;
 
@@ -365,6 +365,13 @@ video {
         color: black;
     }
 
+    #backgroundHeader {
+        object-fit: cover;
+        object-position: 30% 10%;
+        width: 100%;
+        height: 100px;
+    }
+
     .carousel-container {
         display: flex;
         justify-content: center;
@@ -382,12 +389,12 @@ video {
     }
 
     .slider li {
+        display: block;
         width: 100%;
-        margin-right: 0;
-    }
 
+    }
     .slider {
-        display: flex;
+        width: 100%;
     }
 
     .prev,
