--- a/views/pages/friends.twig
+++ b/views/pages/friends.twig
@@ -16,7 +16,7 @@
 			<a href="/home" class="back-arrow"><img src="/../../assets/imgs/flecheBack.png" alt="arrowBack"></a>
 		</li>
 		<div class="title">
-			<h1>Ami(e)s</h1>
+			<h1>Suivi(e)s</h1>
 		</div>
 		<div>
 			<a href="/users-to-follow"><img src="/../../assets/imgs/addFriend.png" alt="logo ajouter un ami" class="addFriend"/></a>
