--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -15,6 +15,10 @@
 					</a>
 				</li>
 				<li>
+					<a href="/messagerie"><img src="/../../assets/imgs/messagerieLogo.png" alt="Messages"><span>Messages</span>
+					</a>
+				</li>
+				<li>
 					<a href="/addContent"><img src="/../../assets/imgs/createLogo.png" alt="Create"><span>Create</span>
 					</a>
 				</li>
@@ -23,7 +27,11 @@
 					</a>
 				</li>
 				<li>
-					<a href="/messagerie"><img src="/../../assets/imgs/messagerieLogo.png" alt="Messages"><span>Messages</span>
+					<a href="/collaboration"><img src="/../../assets/imgs/collaborationW.png" alt="Messages"><span>Collaboration</span>
+					</a>
+				</li>
+				<li>
+					<a href="#"><img src="/../../assets/imgs/localisationW.png" alt="Messages"><span>Studio</span>
 					</a>
 				</li>
 			</ul>
