--- a/public/assets/css/addContent.css
+++ b/public/assets/css/addContent.css
@@ -40,13 +40,14 @@ h1 {
 }
 
 form {
+    box-shadow: 0px 0px 20px 3px aquamarine;
     background-color: #2b2b2b;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
     max-width: 400px;
     width: 100%;
-    margin-top: 20px; 
+    margin-top: 150px; 
 }
 
 label {
