--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -181,6 +181,7 @@ p {
     }
 
     #form {
+        box-shadow: 0px 0px 20px 3px aquamarine;
         position: absolute;
         bottom: 5%;
     }
