--- a/public/assets/css/addContent.css
+++ b/public/assets/css/addContent.css
@@ -1,42 +1,42 @@
 body {
-    background-color: black; 
+    background-color: black;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: center; 
-    min-height: 100vh; 
+    align-items: center;
+    min-height: 100vh;
     margin: 0;
-    font-family: Arial, sans-serif; 
+    font-family: Arial, sans-serif;
 }
 
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between; 
-    padding: 5px; 
-    width: 100%; 
+    justify-content: space-between;
+    padding: 5px;
+    width: 100%;
     border-bottom: 1px solid #3d3d3d;
 }
 
 .back-arrow {
-    margin-right: auto; 
+    margin-right: auto;
 }
 
 .back-arrow img {
-    width: 16px; 
-    height: auto; 
+    width: 16px;
+    height: auto;
 }
 
 .title {
-    flex-grow: 1; 
+    flex-grow: 1;
     text-align: center;
     color: aquamarine;
     z-index: 1000;
-    margin-top: 5px; 
+    margin-top: 5px;
 }
 
 h1 {
-    font-size: 1.2em; 
+    font-size: 1.2em;
 }
 
 form {
@@ -47,7 +47,7 @@ form {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.8);
     max-width: 400px;
     width: 100%;
-    margin-top: 150px; 
+    margin-top: 150px;
 }
 
 label {
@@ -75,8 +75,8 @@ select {
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  
-    background-color:  #3d3d3d;
+
+    background-color: #3d3d3d;
 }
 
 
@@ -107,3 +107,13 @@ button:hover {
     font-size: 14px;
     margin-top: 10px;
 }
+
+
+@media (max-width: 768px) {
+    form {
+        position: absolute;
+        top: 0;
+        width: 80%;
+    }
+}
+
