--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -56,6 +56,70 @@ ul.nav-list li img {
     height: 28px;
    
 }
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+}
+
+.modal-content {
+    background-color: #1e1e1e;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+    color: white;
+}
+
+.modal-content h2 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
+
+.modal-content ul {
+    list-style: none;
+    padding: 0;
+}
+
+.modal-content li {
+    margin: 15px 0;
+}
+
+.modal-content button {
+    background-color: aquamarine;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: black;
+    font-size: 1em;
+}
+
+.modal-content button:hover {
+    background-color: #7fffd4;
+}
+
+.close {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 
 @media (max-width: 768px) {
@@ -74,6 +138,24 @@ ul.nav-list li img {
         list-style-type: none;
         width: 24px; 
         height: 24px;
+    }
+
+    .modal {
+        position: fixed; 
+        left: 20%;
+        top: 50%;
+        width: 60%;
+        height: 100%;
+    }
+
+    .modal-content {
+        background-color: #1e1e1e;
+        margin: 15% auto;
+        padding: 20px;
+        border-radius: 8px;
+        width: 200px;
+        text-align: center;
+        color: white;
     }
 }
 
