--- a/views/pages/collaboration.twig
+++ b/views/pages/collaboration.twig
@@ -5,42 +5,31 @@
 {% endblock %}
 
 {% block title %}
-	<title>{{title}}</title>
+	<title>{{ title }}</title>
 {% endblock %}
 
 {% block main %}
 	{% include "../partials/header.twig" %}
-	<div class="header">
-		<li>
-			<a href="/home" class="back-arrow"><img src="/../../assets/imgs/flecheBack.png" alt="arrowBack"></a>
-		</li>
-		<div class="title">
-			<h1>Créer un espace de collaboration</h1>
+
+	<div class="project-container">
+		<div class="project-details">
+			<h1>{{ project.name }}</h1>
+			<p>{{ project.description }}</p>
+		</div>
+
+		<div class="members-list">
+			<h3>Participants</h3>
+			<ul>
+				{% for member in project.members %}
+					<li>
+						<img src="{{ member.picture }}" alt="Avatar">
+						<strong>{{ member.userName }}</strong>
+						({{ member.role }})
+					</li>
+				{% endfor %}
+			</ul>
 		</div>
 	</div>
-	<div class="container">
-		<form action="/createProject" method="POST">
-			<div class="form-group">
-				<label for="projectName">Nom du projet :</label>
-				<input type="text" id="projectName" name="projectName" required>
-			</div>
-
-			<div class="form-group">
-				<label for="description">Description :</label>
-				<textarea id="description" name="description" rows="4" cols="50"></textarea>
-			</div>
-
-			<div class="form-group">
-				<label for="searchUser">Ajouter des membres :</label><br>
-				<input type="text" id="searchUser" placeholder="Rechercher un utilisateur...">
-				<div id="followerList" class="follower-list"></div>
-				<input type="hidden" id="selectedFollowers" name="selectedFollowers">
-			</div>
-
-			<button type="submit">Créer le projet</button>
-		</form>
-	</div>
-
 
 	{% block script %}
 		<script src="/../../assets/js/collaboration.js"></script>
