--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -25,7 +25,7 @@
                     <a href="/myProjects"><img src="/../../assets/imgs/collaborationW.png" alt="Messages"><span>Collaboration</span></a>
                 </li>
                 <li>
-                    <a href="#"><img src="/../../assets/imgs/localisationW.png" alt="Messages"><span>Studio</span></a>
+                    <a href="/studio"><img src="/../../assets/imgs/localisationW.png" alt="Messages"><span>Studio</span></a>
                 </li>
             </ul>
         </nav>
