--- a/public/assets/css/studio.css
+++ b/public/assets/css/studio.css
@@ -147,6 +147,42 @@ h1 {
     z-index: 1001;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#directionArrow {
+    font-size: 30px;
+    margin: 10px 0;
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#instruction {
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+
 
 
 @media (max-width: 768px) {
